--- a/molecule-visualiser/package.json
+++ b/molecule-visualiser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "molecule-visulaiser",
+  "name": "molecule-visualiser",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
