--- a/molecule-visualiser/package.json
+++ b/molecule-visualiser/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "3dmol": "^2.1.0",
-    "axios": "^1.7.0",
+    "axios": "^1.8.1",
     "d3": "^7.9.0",
     "plotly.js": "^2.32.0",
     "react": "^18.3.1",
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.164.1",
     "web-vitals": "^2.1.4"
